Fix: Update framer-motion to v11 for React 19 compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,26 @@ docker-compose.override.yml
 
 # Local env files
 *.local
+
+# Documentation files (keeping only essential README)
+ADVANCED_FEATURES.md
+DEPLOYMENT_CHECKLIST.md
+DEPLOYMENT_GUIDE.md
+DEPLOYMENT_OPTIONS.md
+DEPLOYMENT_README.md
+DEPLOYMENT_SUMMARY.md
+DEPLOYMENT_TROUBLESHOOTING.md
+DESIGN_SYSTEM.md
+DOCUMENTATION_INDEX.md
+FEATURES_QUICK_REFERENCE.md
+FEATURES_SUMMARY.md
+GETTING_STARTED.md
+GITIGNORE_SUMMARY.md
+MODERNIZATION_GUIDE.md
+PROJECT_ANALYSIS.md
+QUICK_REFERENCE.md
+QUICK_START.md
+README_MODERNIZATION.md
+START_HERE.md
+VISUAL_GUIDE.md
+Details.txt
